samples/_failures_safe/1761526276_f72499_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3d3a547b.c: In function ‘matrix_determinant’:
./samples/SAFE/__tmp_3d3a547b.c:136:13: error: expected expression at end of input
  136 |             !matrix_get(a, 1, 0, &a21) || !matrix_get(a, 1, 1, &a22)) return
      |             ^
./samples/SAFE/__tmp_3d3a547b.c:136:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3d3a547b.c:136:13: error: expected declaration or statement at end of input
